--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
+    "formik": "^2.4.5",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-responsive-screen": "^1.4.2"
+    "react-native-animatable": "^1.4.0",
+    "react-native-media-query": "^2.0.1",
+    "react-native-responsive-screen": "^1.4.2",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
