--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-animatable": "^1.4.0",
     "react-native-media-query": "^2.0.1",
     "react-native-responsive-screen": "^1.4.2",
+    "react-native-snackbar": "^2.6.2",
     "yup": "^1.3.2"
   },
   "devDependencies": {
