--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/vector-icons": "^13.0.0",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.20",
     "expo": "~49.0.15",
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
@@ -20,7 +23,9 @@
     "react": "18.2.0",
     "react-native": "^0.72.6",
     "react-native-animatable": "^1.4.0",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-media-query": "^2.0.1",
+    "react-native-reanimated": "~3.3.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-snackbar": "^2.6.2",
     "react-native-vector-icons": "^10.0.2",
