--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
+    "axios": "^1.6.2",
     "expo": "~49.0.15",
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
@@ -29,7 +30,8 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-snackbar": "^2.6.2",
     "react-native-vector-icons": "^10.0.2",
-    "yup": "^1.3.2"
+    "yup": "^1.3.2",
+    "@expo/webpack-config": "^19.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
