--- a/package.json
+++ b/package.json
@@ -27,11 +27,15 @@
     "react": "18.2.0",
     "react-native": "^0.72.6",
     "react-native-animatable": "^1.4.0",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-media-query": "^2.0.1",
     "react-native-reanimated": "~3.3.0",
+    "react-native-redash": "^18.1.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-snackbar": "^2.6.2",
+    "react-native-svg": "13.9.0",
     "react-native-vector-icons": "^10.0.2",
     "toggle-switch-react-native": "^3.3.0",
     "yup": "^1.3.2"
