--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 #Dialog WIFI
-# REACT_APP_BASE_URL = http://192.168.163.200:3000
-REACT_APP_BASE_URL = https://fair-plum-bee-slip.cyclic.app
+REACT_APP_BASE_URL = http://192.168.121.200:3000
+# REACT_APP_BASE_URL = https://fair-plum-bee-slip.cyclic.app
 
 
